Expand structured concurrency slides and trim wix-ninja chapter
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>